--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Amazon EC2 container</title>
+<title>My Github website</title>
 <script>
 var isNS = (navigator.appName == "Netscape") ? 1 : 0;
 
